[gd_scene load_steps=2 format=3 uid="uid://cyvl4cqdahpxx"]

[ext_resource type="Script" uid="uid://bpbcph0kw33ew" path="res://Code/UserInterface/OptimizationTap.gd" id="1_mxjrs"]

[node name="OptimizationTab" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15
script = ExtResource("1_mxjrs")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="OptionsContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 15

[node name="QualitySection" type="VBoxContainer" parent="ScrollContainer/OptionsContainer"]
layout_mode = 2

[node name="QualityLabel" type="Label" parent="ScrollContainer/OptionsContainer/QualitySection"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Quality Preset"

[node name="QualityOption" type="OptionButton" parent="ScrollContainer/OptionsContainer/QualitySection"]
layout_mode = 2
tooltip_text = "Select overall quality preset - this will adjust multiple settings at once"
selected = 2
item_count = 5
popup/item_0/text = "Ultra Low"
popup/item_0/id = 0
popup/item_1/text = "Low"
popup/item_1/id = 1
popup/item_2/text = "Medium"
popup/item_2/id = 2
popup/item_3/text = "High"
popup/item_3/id = 3
popup/item_4/text = "Ultra"
popup/item_4/id = 4

[node name="HSeparator" type="HSeparator" parent="ScrollContainer/OptionsContainer"]
layout_mode = 2

[node name="AutoSection" type="GridContainer" parent="ScrollContainer/OptionsContainer"]
layout_mode = 2
columns = 2

[node name="AutoOptimizeLabel" type="Label" parent="ScrollContainer/OptionsContainer/AutoSection"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Automatically adjust settings to maintain target frame rate"
text = "Auto-Optimize"

[node name="AutoCheck" type="CheckBox" parent="ScrollContainer/OptionsContainer/AutoSection"]
layout_mode = 2
tooltip_text = "Automatically adjust settings to maintain target frame rate"
button_pressed = true

[node name="FPSSection" type="HBoxContainer" parent="ScrollContainer/OptionsContainer"]
layout_mode = 2
tooltip_text = "Target frame rate for auto-optimization"

[node name="TargetFPSLabel" type="Label" parent="ScrollContainer/OptionsContainer/FPSSection"]
layout_mode = 2
size_flags_horizontal = 3
text = "Target FPS:"

[node name="TargetFPSSlider" type="HSlider" parent="ScrollContainer/OptionsContainer/FPSSection"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 2.0
min_value = 30.0
max_value = 120.0
value = 60.0

[node name="TargetFPSValue" type="Label" parent="ScrollContainer/OptionsContainer/FPSSection"]
layout_mode = 2
text = "60 FPS"

[node name="HSeparator2" type="HSeparator" parent="ScrollContainer/OptionsContainer"]
layout_mode = 2

[node name="LightingHeader" type="Label" parent="ScrollContainer/OptionsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Lighting Settings"

[node name="LightSection" type="VBoxContainer" parent="ScrollContainer/OptionsContainer"]
layout_mode = 2

[node name="LightQualityLabel" type="Label" parent="ScrollContainer/OptionsContainer/LightSection"]
layout_mode = 2
text = "Light Quality:"

[node name="LightQualityOption" type="OptionButton" parent="ScrollContainer/OptionsContainer/LightSection"]
layout_mode = 2
tooltip_text = "Controls light quality, range, and effects"
selected = 2
item_count = 5
popup/item_0/text = "Disabled"
popup/item_0/id = 0
popup/item_1/text = "Low"
popup/item_1/id = 1
popup/item_2/text = "Medium"
popup/item_2/id = 2
popup/item_3/text = "High"
popup/item_3/id = 3
popup/item_4/text = "Ultra"
popup/item_4/id = 4

[node name="ShadowSection" type="VBoxContainer" parent="ScrollContainer/OptionsContainer"]
layout_mode = 2

[node name="ShadowQualityLabel" type="Label" parent="ScrollContainer/OptionsContainer/ShadowSection"]
layout_mode = 2
text = "Shadow Quality:"

[node name="ShadowQualityOption" type="OptionButton" parent="ScrollContainer/OptionsContainer/ShadowSection"]
layout_mode = 2
tooltip_text = "Controls shadow quality and distance"
selected = 2
item_count = 4
popup/item_0/text = "Disabled"
popup/item_0/id = 0
popup/item_1/text = "Low"
popup/item_1/id = 1
popup/item_2/text = "Medium"
popup/item_2/id = 2
popup/item_3/text = "High"
popup/item_3/id = 3

[node name="HSeparator3" type="HSeparator" parent="ScrollContainer/OptionsContainer"]
layout_mode = 2

[node name="WorldHeader" type="Label" parent="ScrollContainer/OptionsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "World Settings"

[node name="ChunkSection" type="HBoxContainer" parent="ScrollContainer/OptionsContainer"]
layout_mode = 2

[node name="ChunkDistanceLabel" type="Label" parent="ScrollContainer/OptionsContainer/ChunkSection"]
layout_mode = 2
size_flags_horizontal = 3
text = "Chunk Load Distance:"

[node name="ChunkDistanceSlider" type="HSlider" parent="ScrollContainer/OptionsContainer/ChunkSection"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 2.0
tooltip_text = "Controls how many chunks to load around the player"
min_value = 1.0
max_value = 5.0
value = 3.0

[node name="ChunkDistanceValue" type="Label" parent="ScrollContainer/OptionsContainer/ChunkSection"]
layout_mode = 2
text = "3"

[node name="EntitySection" type="HBoxContainer" parent="ScrollContainer/OptionsContainer"]
layout_mode = 2

[node name="EntityDistanceLabel" type="Label" parent="ScrollContainer/OptionsContainer/EntitySection"]
layout_mode = 2
size_flags_horizontal = 3
text = "Entity Cull Distance:"

[node name="EntityDistanceSlider" type="HSlider" parent="ScrollContainer/OptionsContainer/EntitySection"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 2.0
tooltip_text = "Controls how far away entities are rendered"
min_value = 5.0
max_value = 30.0
value = 20.0

[node name="EntityDistanceValue" type="Label" parent="ScrollContainer/OptionsContainer/EntitySection"]
layout_mode = 2
text = "20 tiles"

[node name="HSeparator4" type="HSeparator" parent="ScrollContainer/OptionsContainer"]
layout_mode = 2

[node name="EffectsHeader" type="Label" parent="ScrollContainer/OptionsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Effects Settings"

[node name="ParticleSection" type="VBoxContainer" parent="ScrollContainer/OptionsContainer"]
layout_mode = 2

[node name="ParticleQualityLabel" type="Label" parent="ScrollContainer/OptionsContainer/ParticleSection"]
layout_mode = 2
text = "Particle Effects:"

[node name="ParticleQualityOption" type="OptionButton" parent="ScrollContainer/OptionsContainer/ParticleSection"]
layout_mode = 2
tooltip_text = "Controls particle effects quality and quantity"
selected = 2
item_count = 4
popup/item_0/text = "Disabled"
popup/item_0/id = 0
popup/item_1/text = "Low"
popup/item_1/id = 1
popup/item_2/text = "Medium"
popup/item_2/id = 2
popup/item_3/text = "High"
popup/item_3/id = 3

[node name="HSeparator5" type="HSeparator" parent="ScrollContainer/OptionsContainer"]
layout_mode = 2

[node name="PhysicsHeader" type="Label" parent="ScrollContainer/OptionsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Physics Settings"

[node name="PhysicsSection" type="VBoxContainer" parent="ScrollContainer/OptionsContainer"]
layout_mode = 2

[node name="PhysicsRateLabel" type="Label" parent="ScrollContainer/OptionsContainer/PhysicsSection"]
layout_mode = 2
text = "Physics Rate:"

[node name="PhysicsRateOption" type="OptionButton" parent="ScrollContainer/OptionsContainer/PhysicsSection"]
layout_mode = 2
tooltip_text = "Controls how frequently physics are calculated"
selected = 2
item_count = 3
popup/item_0/text = "30 Hz"
popup/item_0/id = 0
popup/item_1/text = "45 Hz"
popup/item_1/id = 1
popup/item_2/text = "60 Hz"
popup/item_2/id = 2

[node name="InfoSection" type="VBoxContainer" parent="ScrollContainer/OptionsContainer"]
layout_mode = 2
alignment = 2

[node name="HSeparator" type="HSeparator" parent="ScrollContainer/OptionsContainer/InfoSection"]
layout_mode = 2

[node name="InfoLabel" type="Label" parent="ScrollContainer/OptionsContainer/InfoSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.678431, 0.678431, 0.678431, 1)
theme_override_font_sizes/font_size = 12
text = "Note: Individual settings are overridden when Auto-Optimize is enabled or when changing Quality Preset."
horizontal_alignment = 1
autowrap_mode = 3
